kubernetes/home/apps/network/envoy-gateway/nas-service/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas-service
spec:
  hostnames: ["nas.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: nas-service
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
