kubernetes/home/apps/network/envoy-gateway/nas-service/rustfs.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustf-s3-service
spec:
  hostnames: ["s3.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: rustfs-s3-service
      matches:
        - path:
            type: PathPrefix
            value: /

# RustFS Console

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-s3-console-service
spec:
  hostnames: ["rustfs.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: rustfs-s3-console-service
      matches:
        - path:
            type: PathPrefix
            value: /
